samples/_failures_safe/1761145084_a43bb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59afd79b.c: In function ‘main’:
./samples/SAFE/__tmp_59afd79b.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_59afd79b.c:168:9: error: expected declaration or statement at end of input
